--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "devDependencies": {
     "babelify": "^6.1.1",
     "browserify": "^10.2.0",
+    "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
+    "gulp-react": "^3.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-webserver": "^0.9.1",
     "jshint-stylish": "^1.0.2",
-    "node-bourbon": "^4.2.2"
+    "node-bourbon": "^4.2.2",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "react": "^0.13.3"
