--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "babelify": "^6.1.1",
     "browserify": "^10.2.0",
     "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.5.2",
-    "gulp-react": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
     "gulp-uglify": "^1.2.0",
