--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gulp-webserver": "^0.9.1",
     "jshint-stylish": "^1.0.2",
     "node-bourbon": "^4.2.2",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.1"
   },
   "dependencies": {
     "react": "^0.13.3"
