--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-register": "^6.18.0",
     "css-loader": "^0.26.0",
     "gh-pages-deploy": "^0.4.2",
-    "node-bourbon": "^4.2.2",
+    "node-sass": "^3.13.0",
     "postcss-loader": "^1.1.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
